# q

./: .clinerules  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  design.md  install.sh  q.rb  streaming-implementation-guide.md  streaming-redesign.md
.github/workflows/: release.yml
docs/: 1impl-note-milestone-3.md  1impl-note-milestone-4.md  1impl-note-milestone-5.md  1impl-note-milestone-6.md  homebrew-tap-setup.md  milestone1-plan.md  milestone2-plan.md  milestone3-plan.md  milestone4-plan.md  milestone5-plan.md  milestone6-plan.md
docs/adr/: 0001-initial-cli-structure.md  0002-config-management.md  0003-llm-api-integration.md  0004-context-injection.md  0005-command-suggestions.md  0006-streaming-resilience.md
src/: lib.rs  main.rs
src/api/: gemini.rs  mod.rs  openai.rs
src/cli/: args.rs  mod.rs
src/commands/: database.rs  matcher.rs  mod.rs  suggest.rs
src/config/: mod.rs  paths.rs  types.rs
src/context/: directory.rs  file.rs  history.rs  mod.rs
src/core/: cache.rs  mod.rs  retry.rs  stream.rs
src/utils/: errors.rs  format.rs  mod.rs
tests/: api_tests.rs  cli_tests.rs  config_tests.rs  streaming_tests.rs
