[package]
name = "q"
version = "0.1.0"
edition = "2021"
description = "CLI tool for querying LLMs"
authors = ["Ryohei <ryohei@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
colored = "2.0"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"  # For testing with temporary config files
