[package]
name = "q"
version = "0.1.0"
edition = "2021"
description = "CLI tool for querying LLMs"
authors = ["Ryohei <ryohei@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
colored = "2.0"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "fs"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"  # For async traits
shellexpand = "3.1"  # For expanding shell paths
walkdir = "2.4"      # For recursive directory listing
regex = "1.10"       # For command pattern matching
lazy_static = "1.4"  # For static command database

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"  # For testing with temporary config files
tokio-test = "0.4"  # For testing async code
wiremock = "0.5"    # For mocking HTTP requests in tests
